--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<!-- 文字對齊 -->
 			<div class="text-alignment"></div>
 			<!-- 文字顏色(B/W) -->
-			<div class="text-color" data-color="white"></div>
+			<div class="text-color" data-color="black"></div>
 			<!--  文字大小 -->
 			<input type="text" class="text-size" value="60" />
 			<!--  背景顏色 -->
