All in pure javascript

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div class="control-area">
 		<div class="control-bar">
 			<!-- 文字對齊 -->
-			<div class="text-alignment"></div>
+			<div class="text-alignment" data-align="mid"></div>
 			<!-- 文字顏色(B/W) -->
 			<div class="text-color" data-color="black"></div>
 			<!--  文字大小 -->
