Delete useless tag in HEAD

--- a/index.html
+++ b/index.html
@@ -21,17 +21,12 @@
 	<meta property="og:description" content="Write a message for someone" />
 
 	<title>Message Board</title>
-	<link rel="Shortcut Icon" type="image/x-icon" href="" />
-	<link rel="apple-touch-icon" href="" />
 
 	<!-- google font -->
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css">
 
-	<!-- jQuery -->
-	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
-
 	<!-- my CSS -->
-	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/main.css">
 
 </head>
 
