Two function conflicts

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body class="v-mid bg-white">
 
-	<input type="text" id="content" value="離開一下，馬上回來。" />
+	<input type="text" id="content" value="離開一下，馬上回來。" class="mid" />
 
 	<div class="control-area">
 		<div class="control-bar">
